[gd_scene load_steps=4 format=3 uid="uid://d0q4h1qf7godu"]

[ext_resource type="PackedScene" uid="uid://b0fep0a8toxbc" path="res://src/ui/menu/widget/menu_container.tscn" id="1_4flny"]
[ext_resource type="PackedScene" uid="uid://dov3l4ful35q5" path="res://src/ui/menu/widget/save_button.tscn" id="2_3f1id"]
[ext_resource type="Script" uid="uid://dhfdhq6gav8n" path="res://src/ui/menu/load_container.gd" id="2_iydou"]

[node name="LoadContainer" node_paths=PackedStringArray("first_focus") instance=ExtResource("1_4flny")]
script = ExtResource("2_iydou")
first_focus = NodePath("ContentContainer/GridContainer/SaveButton0")
menu_id = 2
title = "TITLE_LOAD"

[node name="TitleLabel" parent="TitleContainer" index="1"]
text = "SAVE_TITLE"

[node name="GridContainer" type="GridContainer" parent="ContentContainer" index="0"]
layout_mode = 2
columns = 2

[node name="Label0" type="Label" parent="ContentContainer/GridContainer" index="0"]
layout_mode = 2
text = "1"
vertical_alignment = 1

[node name="SaveButton0" parent="ContentContainer/GridContainer" index="1" instance=ExtResource("2_3f1id")]
layout_mode = 2
save_name = &"save0"

[node name="Label1" type="Label" parent="ContentContainer/GridContainer" index="2"]
layout_mode = 2
text = "2"
vertical_alignment = 1

[node name="SaveButton1" parent="ContentContainer/GridContainer" index="3" instance=ExtResource("2_3f1id")]
layout_mode = 2
save_name = &"save1"

[node name="Label2" type="Label" parent="ContentContainer/GridContainer" index="4"]
layout_mode = 2
text = "3"
vertical_alignment = 1

[node name="SaveButton2" parent="ContentContainer/GridContainer" index="5" instance=ExtResource("2_3f1id")]
layout_mode = 2
save_name = &"save2"

[node name="Label3" type="Label" parent="ContentContainer/GridContainer" index="6"]
layout_mode = 2
text = "4"
vertical_alignment = 1

[node name="SaveButton3" parent="ContentContainer/GridContainer" index="7" instance=ExtResource("2_3f1id")]
layout_mode = 2
save_name = &"save3"

[node name="Label4" type="Label" parent="ContentContainer/GridContainer" index="8"]
layout_mode = 2
text = "5"
vertical_alignment = 1

[node name="SaveButton4" parent="ContentContainer/GridContainer" index="9" instance=ExtResource("2_3f1id")]
layout_mode = 2
save_name = &"save4"

[node name="PathButton" type="Button" parent="ContentContainer" index="1" groups=["menu_option"]]
layout_mode = 2
text = "SAVE_PATH"

[connection signal="focus_entered" from="ContentContainer/GridContainer/SaveButton0" to="." method="_on_save_button_0_focus_entered"]
[connection signal="pressed" from="ContentContainer/GridContainer/SaveButton0" to="." method="_on_save_button_0_pressed"]
[connection signal="focus_entered" from="ContentContainer/GridContainer/SaveButton1" to="." method="_on_save_button_1_focus_entered"]
[connection signal="pressed" from="ContentContainer/GridContainer/SaveButton1" to="." method="_on_save_button_1_pressed"]
[connection signal="focus_entered" from="ContentContainer/GridContainer/SaveButton2" to="." method="_on_save_button_2_focus_entered"]
[connection signal="pressed" from="ContentContainer/GridContainer/SaveButton2" to="." method="_on_save_button_2_pressed"]
[connection signal="focus_entered" from="ContentContainer/GridContainer/SaveButton3" to="." method="_on_save_button_3_focus_entered"]
[connection signal="pressed" from="ContentContainer/GridContainer/SaveButton3" to="." method="_on_save_button_3_pressed"]
[connection signal="focus_entered" from="ContentContainer/GridContainer/SaveButton4" to="." method="_on_save_button_4_focus_entered"]
[connection signal="pressed" from="ContentContainer/GridContainer/SaveButton4" to="." method="_on_save_button_4_pressed"]
[connection signal="focus_entered" from="ContentContainer/PathButton" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="ContentContainer/PathButton" to="." method="_on_path_button_pressed"]
